# ISA-OBC-Flight-Software-Embedded-C

./: .cursorrules  .gitignore  Makefile  Makefile.dap  README.md  cursor_discuss_flight_software_requirem.md  main.c  main_DAP.c  seq.md
.github/workflows/: c-cpp.yml
SRS/: sequencer_srs.md
docs/: guidance_memory_test.md
include/common/: config.h  types.h
include/dap/: dap.h
include/guidance/: guidance.h
include/hal/: actuator.h  gnss.h  imu.h
include/math/: coordinate_transforms.h  matrix3.h  quaternion.h  vector3.h
include/navigation/: navigation.h
include/sequencer/: sequencer.h
minor/: test_guidance_minor.c
src/dap/: dap.c
src/guidance/: guidance.c
src/hal/: actuator.c  gnss.c  imu.c
src/math/: coordinate_transforms.c  matrix3.c  quaternion.c  vector3.c
src/navigation/: navigation.c
src/sequencer/: sequencer.c
test/dap/: CMakeLists.txt  Makefile  dap.c  dap.h  test_DAP.c
test/dap/build_host/: dap_test
test/dap/build_sam/: dap_test
test/guidance/: Makefile  coordinate_transforms.c  coordinate_transforms.h  guidance.c  guidance.h  guidance_test.c  math_utils.c  math_utils.h  vector3.c  vector3.h
test/guidance/guidance old c code/: guidance_matlab.c  guidance_matlab.h
test/sequencer/: Makefile  Makefile.sequencer  main_sequencer_sim.c  sequencer.c  sequencer.h  sequencer.md  sequencer_test  sequencer_test.c  sequencer_unit_test.c  unit  vineetha
